Fix Chinese2.py & Merge source code from the latest version

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# # Core
+# **/config.py
+# **/GPT_SoVITS/AR/
+# **/GPT_SoVITS/configs/
+# **/GPT_SoVITS/feature_extractor/cnhubert.py
+# **/GPT_SoVITS/module/
+# **/GPT_SoVITS/pretrained_models/
+# **/GPT_SoVITS/text/
+# **/GPT_SoVITS/tools/
+# **/GPT_SoVITS/TTS_infer_pack/
+# **/GPT_SoVITS/inference_webui.py
+# **/GPT_SoVITS/inference_webui_fast.py
+# **/GPT_SoVITS/onnx_export.py
+# **/GPT_SoVITS/process_ckpt.py
+# **/GPT_SoVITS/s1_train.py
+# **/GPT_SoVITS/s2_train.py
+# **/GPT_SoVITS/utils.py
+
 # Generated contents
 **/__pycache__/
 **/build/
